# mapbuilder

./: .envrc  .gitignore  LICENSE  README.md  action.yml  flake.nix  pyproject.toml
.github/workflows/: action.yml  build.yml
contrib/: draw-ecl.py
mapbuilder/: __init__.py  __main__.py  builder.py  cache.py  pyinstaller.py
mapbuilder/data/: aixm.py  aixm2.py  kml.py  raw.py  rwy.py  sectors.py  sidstar.py
mapbuilder/dfs/: aixm.py  datasets.py  models.py
mapbuilder/handlers/: jinja.py  plaintext.py
mapbuilder/utils/: ad.py  ecl.py  geo.py  geojson.py  geopackage.py  legacy.py  sidstar.py
