[tool.poetry]
name = "mapbuilder"
version = "0.1.0"
description = "A builder for GRPlugin and Topsky Maps"
authors = ["Alex Legler <alex@a3li.li>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"
shapely = "^2.0.2"
more-itertools = "^10.1.0"
rich = "^13.7.0"
lxml = "^4.9.3"
fiona = "^1.9.5"
pygeodesy = "^23.11.11"
xmltodict = "^0.13.0"

[tool.poetry.scripts]
mapbuilder = 'mapbuilder.__main__:entry'

[tool.poetry.group.dev.dependencies]
ruff = "0.1.8"
lxml-stubs = "^0.4.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
